# TamiLearnOpenGL

./: .gitignore  CMakeLists.txt  main.cpp  main.cpp.h  shader.h
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: tri.frag  tri.glsl
